@@ -1,0 +1,7 @@
+                   FUNCTION:NAME
+                          :BEGIN         2
+                          :BEGIN 
+
+-- @@stderr --
+dtrace: script 'test/unittest/buffering/tst.resize3.d' matched 4 probes
+dtrace: speculation size lowered to 400m
